--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
             <p class="text-gray-500">Login untuk melanjutkan</p>
         </div>
         
-        <!-- Penjelasan Penting tentang GitHub Token -->
         <div id="token-info" class="p-4 bg-yellow-100 border-l-4 border-yellow-500 text-yellow-700 rounded-md">
-            <h4 class="font-bold">Informasi Penting!</h4>
-            <p class="text-sm">Sistem ini memerlukan <strong class="font-semibold">GitHub Personal Access Token (Classic)</strong> dengan scope <code class="bg-yellow-200 px-1 rounded">repo</code> untuk membaca dan menulis data absensi di repositori Anda. Token ini hanya disimpan di browser Anda (`localStorage`) dan tidak dikirim ke server lain.</p>
-            <a href="https://github.com/settings/tokens/new?scopes=repo&description=AbsensiAppToken" target="_blank" class="text-sm text-blue-600 hover:underline mt-2 inline-block">Buat Token di sini &rarr;</a>
+            <h4 class="font-bold">Penting!</h4>
+            <p class="text-sm">Pastikan Anda telah membuat repositori dengan nama <strong class="font-semibold">data-absensi-karyawan</strong> di akun GitHub Anda.</p>
+            <a href="https://github.com/settings/tokens/new?scopes=repo&description=AbsensiAppToken" target="_blank" class="text-sm text-blue-600 hover:underline mt-2 inline-block">Buat Token GitHub di sini &rarr;</a>
         </div>
 
         <form id="login-form" class="space-y-4">
@@ -30,25 +29,19 @@
                 <label for="github-token" class="text-sm font-medium text-gray-700">GitHub Personal Access Token</label>
                 <input id="github-token" name="github-token" type="password" required
                     class="w-full px-3 py-2 mt-1 text-gray-700 bg-gray-50 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
-                    placeholder="Contoh: ghp_xxxxxxxxxxxx">
-            </div>
-            <div>
-                <label for="repo-path" class="text-sm font-medium text-gray-700">Path Repositori GitHub</label>
-                <input id="repo-path" name="repo-path" type="text" required
-                    class="w-full px-3 py-2 mt-1 text-gray-700 bg-gray-50 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
-                    placeholder="Contoh: username/nama-repo">
+                    placeholder="Masukkan token Anda">
             </div>
             <div>
                 <label for="username" class="text-sm font-medium text-gray-700">Username</label>
                 <input id="username" name="username" type="text" autocomplete="username" required
                     class="w-full px-3 py-2 mt-1 text-gray-700 bg-gray-50 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
-                    placeholder="Username Anda">
+                    placeholder="Username aplikasi Anda">
             </div>
             <div>
                 <label for="password" class="text-sm font-medium text-gray-700">Password</label>
                 <input id="password" name="password" type="password" autocomplete="current-password" required
                     class="w-full px-3 py-2 mt-1 text-gray-700 bg-gray-50 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
-                    placeholder="Password Anda">
+                    placeholder="Password aplikasi Anda">
             </div>
             <div>
                 <button type="submit"
@@ -59,9 +52,7 @@
         </form>
     </div>
 
-    <!-- CDN untuk PapaParse (CSV Parser) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
-    <!-- Script utama aplikasi -->
     <script src="scripts.js"></script>
 </body>
 </html>
