--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         body { font-family: 'Inter', sans-serif; }
     </style>
 </head>
-<body class="bg-gray-100 flex items-center justify-center h-screen">
+<body class="bg-gray-100 flex items-center justify-center h-screen p-4">
     <div class="w-full max-w-md p-8 space-y-6 bg-white rounded-xl shadow-lg">
         
         <!-- Login Form (Default) -->
