--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -7,9 +7,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
     <style>
         body { font-family: 'Inter', sans-serif; }
         .tab-button.active { border-color: #3b82f6; color: #3b82f6; background-color: #eff6ff; }
@@ -39,22 +36,12 @@
 
         <div id="tab-content-attendance">
             <div class="bg-white p-6 rounded-xl shadow-lg">
-                <div class="flex flex-col md:flex-row justify-between items-center mb-4 gap-4">
-                    <h2 class="text-xl font-bold text-gray-800">Laporan Absensi Karyawan</h2>
-                    <div class="flex items-center gap-2">
-                        <button id="export-excel-btn" class="px-4 py-2 text-sm font-medium text-white bg-green-600 rounded-md hover:bg-green-700">Export Excel</button>
-                        <button id="export-pdf-btn" class="px-4 py-2 text-sm font-medium text-white bg-red-500 rounded-md hover:bg-red-600">Export PDF</button>
-                    </div>
-                </div>
-                <div class="flex flex-col md:flex-row gap-4 mb-4">
-                    <input type="text" id="filter-name" placeholder="Filter berdasarkan nama..." class="w-full md:w-1/3 px-3 py-2 border border-gray-300 rounded-md">
-                    <input type="date" id="filter-date" class="w-full md:w-1/3 px-3 py-2 border border-gray-300 rounded-md">
-                </div>
+                <h2 class="text-xl font-bold text-gray-800 mb-4">Laporan Absensi Karyawan</h2>
                 <div class="overflow-x-auto">
-                    <table id="attendance-table" class="min-w-full divide-y divide-gray-200">
+                    <table class="min-w-full divide-y divide-gray-200">
                         <thead class="bg-gray-50">
                             <tr>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Username</th>
+                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Nama Karyawan</th>
                                 <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Tanggal</th>
                                 <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Jam Masuk</th>
                                 <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Jam Pulang</th>
@@ -68,15 +55,13 @@
 
         <div id="tab-content-users" class="hidden">
             <div class="bg-white p-6 rounded-xl shadow-lg">
-                <div class="flex justify-between items-center mb-4">
-                    <h2 class="text-xl font-bold text-gray-800">Daftar Pengguna</h2>
-                    <button id="add-user-btn" class="px-4 py-2 text-sm font-medium text-white bg-blue-600 rounded-md hover:bg-blue-700">Tambah Pengguna</button>
-                </div>
+                <h2 class="text-xl font-bold text-gray-800 mb-4">Daftar Pengguna</h2>
                 <div class="overflow-x-auto">
                     <table class="min-w-full divide-y divide-gray-200">
                         <thead class="bg-gray-50">
                             <tr>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Username</th>
+                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Nama</th>
+                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Email</th>
                                 <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Role</th>
                                 <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Aksi</th>
                             </tr>
@@ -87,8 +72,6 @@
             </div>
         </div>
     </main>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
-    <script src="scripts.js"></script>
+    <script type="module" src="scripts.js"></script>
 </body>
 </html>
