--- a/karyawan-dashboard.html
+++ b/karyawan-dashboard.html
@@ -33,10 +33,6 @@
                         <button id="clock-in-btn" class="w-full px-4 py-3 font-bold text-white bg-green-600 rounded-md hover:bg-green-700 transition-all duration-300 disabled:bg-gray-400">CLOCK IN</button>
                         <button id="clock-out-btn" class="w-full px-4 py-3 font-bold text-white bg-orange-500 rounded-md hover:bg-orange-600 transition-all duration-300 disabled:bg-gray-400">CLOCK OUT</button>
                     </div>
-                    <div id="loading-spinner" class="hidden text-center mt-4">
-                        <svg class="animate-spin h-8 w-8 text-blue-600 mx-auto" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"><circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle><path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path></svg>
-                        <p class="text-sm text-gray-500 mt-2">Menyimpan data...</p>
-                    </div>
                 </div>
                 <div class="md:col-span-2 bg-white p-6 rounded-xl shadow-lg">
                     <h2 class="text-xl font-bold text-gray-800 mb-4">Riwayat Absensi Anda</h2>
@@ -56,8 +52,6 @@
             </div>
         </div>
     </main>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
-    <script src="scripts.js"></script>
+    <script type="module" src="scripts.js"></script>
 </body>
 </html>
