--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <style>
-        body { font-family: 'Inter', sans-serif; }
-    </style>
+    <style> body { font-family: 'Inter', sans-serif; } </style>
 </head>
 <body class="bg-gray-100 flex items-center justify-center h-screen p-4">
     <div class="w-full max-w-md p-8 space-y-6 bg-white rounded-xl shadow-lg">
         
-        <!-- Login Form (Default) -->
         <div id="login-view">
             <div class="text-center mb-6">
                 <h1 class="text-3xl font-bold text-gray-800">Selamat Datang</h1>
@@ -22,8 +19,8 @@
             </div>
             <form id="login-form" class="space-y-4">
                 <div>
-                    <label for="login-username" class="text-sm font-medium text-gray-700">Username</label>
-                    <input id="login-username" type="text" required class="w-full px-3 py-2 mt-1 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
+                    <label for="login-email" class="text-sm font-medium text-gray-700">Email</label>
+                    <input id="login-email" type="email" required class="w-full px-3 py-2 mt-1 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
                 </div>
                 <div>
                     <label for="login-password" class="text-sm font-medium text-gray-700">Password</label>
@@ -37,7 +34,6 @@
             </p>
         </div>
 
-        <!-- Register Form (Hidden by default) -->
         <div id="register-view" class="hidden">
             <div class="text-center mb-6">
                 <h1 class="text-3xl font-bold text-gray-800">Buat Akun Baru</h1>
@@ -45,16 +41,16 @@
             </div>
             <form id="register-form" class="space-y-4">
                 <div>
-                    <label for="register-username" class="text-sm font-medium text-gray-700">Username</label>
+                    <label for="register-username" class="text-sm font-medium text-gray-700">Nama Lengkap</label>
                     <input id="register-username" type="text" required class="w-full px-3 py-2 mt-1 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
+                </div>
+                <div>
+                    <label for="register-email" class="text-sm font-medium text-gray-700">Email</label>
+                    <input id="register-email" type="email" required class="w-full px-3 py-2 mt-1 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
                 </div>
                 <div>
                     <label for="register-password" class="text-sm font-medium text-gray-700">Password</label>
                     <input id="register-password" type="password" required class="w-full px-3 py-2 mt-1 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
-                </div>
-                 <div>
-                    <label for="register-password-confirm" class="text-sm font-medium text-gray-700">Konfirmasi Password</label>
-                    <input id="register-password-confirm" type="password" required class="w-full px-3 py-2 mt-1 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
                 </div>
                 <button type="submit" class="w-full px-4 py-2 font-semibold text-white bg-green-600 rounded-md hover:bg-green-700">Daftar</button>
             </form>
@@ -63,10 +59,7 @@
                 <a href="#" id="show-login-view" class="font-medium text-blue-600 hover:underline">Login di sini</a>
             </p>
         </div>
-
     </div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
-    <script src="scripts.js"></script>
+    <script type="module" src="scripts.js"></script>
 </body>
 </html>
